--- a/backend/package.json
+++ b/backend/package.json
@@ -1,20 +1,22 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/express": "^4.17.17",
-    "@types/node": "^20.5.1",
-    "nodemon": "^3.0.1"
-  },
-  "dependencies": {
-    "express": "^4.18.2"
-  }
+    "name": "backend",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "dev": "ts-node src/main.ts",
+        "dev:watch": "nodemon --watch src src/main.ts",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "@types/express": "^4.17.17",
+        "@types/node": "^20.5.1",
+        "nodemon": "^3.0.1"
+    },
+    "dependencies": {
+        "express": "^4.18.2"
+    }
 }
