--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
   },
   "homepage": "https://github.com/hsmith94/wardrobe#readme",
   "dependencies": {
-    "@angular/cli": "^16.2.0"
-  }
+    "typescript": "~5.1.3"
+  },
+  "engines": {
+    "node": "16",
+    "npm": "8"
+  },
+  "engineStrict": true
 }
