--- a/backend/package.json
+++ b/backend/package.json
@@ -6,17 +6,28 @@
     "scripts": {
         "dev": "ts-node src/main.ts",
         "dev:watch": "nodemon --watch src src/main.ts",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "jest"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@babel/core": "^7.22.11",
+        "@babel/preset-env": "^7.22.10",
+        "@babel/preset-typescript": "^7.22.11",
         "@types/express": "^4.17.17",
+        "@types/jest": "^29.5.4",
+        "@types/lodash": "^4.14.197",
+        "@types/mysql": "^2.15.21",
         "@types/node": "^20.5.1",
-        "nodemon": "^3.0.1"
+        "babel-jest": "^29.6.4",
+        "jest": "^29.6.4",
+        "nodemon": "^3.0.1",
+        "ts-node": "^10.9.1"
     },
     "dependencies": {
-        "express": "^4.18.2"
+        "express": "^4.18.2",
+        "lodash": "^4.17.21",
+        "mysql": "^2.18.1"
     }
 }
