--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
+    "dev": "npm run watch",
     "test": "ng test"
   },
   "private": true,
