--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
         "@babel/core": "^7.22.11",
         "@babel/preset-env": "^7.22.10",
         "@babel/preset-typescript": "^7.22.11",
+        "@types/cors": "^2.8.14",
         "@types/express": "^4.17.17",
         "@types/jest": "^29.5.4",
         "@types/lodash": "^4.14.197",
@@ -26,6 +27,7 @@
         "ts-node": "^10.9.1"
     },
     "dependencies": {
+        "cors": "^2.8.5",
         "express": "^4.18.2",
         "lodash": "^4.17.21",
         "mysql": "^2.18.1"
