--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
+    "preinstall": "rm -rf ./frontend/node_modules && rm -rf ./backend/node_modules && rm -rf ./database/node_modules",
     "postinstall": "npm --prefix frontend install && npm --prefix backend install",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm run --prefix frontend build && npm run --prefix backend build",
