--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
     "@angular/cli": "^16.2.1",
     "typescript": "~5.1.3"
   },
+  "devDependencies": {
+    "concurrently": "^8.2.1"
+  },
   "engines": {
     "node": "16",
     "npm": "8"
   },
-  "engineStrict": true,
-  "devDependencies": {
-    "concurrently": "^8.2.1"
-  }
+  "engineStrict": true
 }
