--- a/heroku.yml
+++ b/heroku.yml
@@ -1,4 +1,4 @@
-build:
-  docker:
-    web: Dockerfile
-    db: database/Dockerfile
+# build:
+#   docker:
+#     web: Dockerfile
+#     db: database/Dockerfile
